2005-06-03  Alexander Roitman  <shura@gramps-project.org>
	* src/Utils.py (bold_label,unbold_label,temp_label): optionally
	set cursor.
	* src/EditSource.py (__init__,on_switch_page): Call
	display_references using idle_add; (display_references): set
	cursor when done.

2005-06-03  Jens Arvidsson <jya@sverige.nu>
	* src/po/sv.po: Minor fixes found via pochkpyvar.pl.

2005-06-03  Jens Arvidsson <jya@sverige.nu>
	* src/po/sv.po: Translation update for version 2.0.2.

2005-06-02  Don Allingham  <don@gramps-project.org>
	* src/dates/Date_fi.py: Finnish date parser
	* src/dates/Makefile.am: added Date_fi.py
	* src/ChooseParents.py: fixed all_males filtering problem, display
	all people when a person is blocked by the likely filter

2005-06-02  Alex Roitman  <shura@gramps-project.org>
	* src/ReadGedcom.py (get_next): Use single space to split the line
	into level, tag, and the field contents; strip extra white space
	off the tag name.
	* src/po/ru.po: Update for 2.0.2.
	* NEWS: Update.

2005-06-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Utils.py (probably_alive): If no year is given it now treats
	people as dead when they have a death event instead of counting them
	as alive in the curent year when they died in the current year.

2005-06-01  Anton Huber  <anton_huber@gmx.de>
	* src/po/de.po: Updated translation

2005-06-01  Don Allingham  <don@gramps-project.org>
	* src/PeopleModel.py: Improve rebuid times by using database cursor,
	caching sort names, and replacing loops with map/lamba
	* src/PeopleView.py: prevent goto_active_person reentrancy, use get_selected_objects
	instead of selected_foreach, combine row_changed and set_dnd_target into the same
	callback, rebuild only affected surname on person-update if pissible

2005-06-01  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Makefile.am: Don't ship NavWebPage yet.
	* src/po/template.po: Update for 2.0.2.

2005-05-31  Don Allingham  <don@gramps-project.org>